www/css/application.css
/****Color Pallet
    red: e13030
    blue: 288edf
    
**/
@font-face
{
font-family: 'norwester';
src: url(../font/norwester.eot);
 src: url(../font/norwester.eot?#iefix) format("embedded-opentype"), url(../font/norwester.woff) format("woff"), url(../font/norwester.ttf) format("truetype");

}
body {
    font-family: "norwester"!important;
     font-weight: 100;
}

* {
    -webkit-user-select: none; /* Disable selection/copy of elements when tapping for a long time */
    -webkit-touch-callout: none; /* Disable touch callouts */
}

input {
    -webkit-user-select: text; /* Allow selection for input elements */
}

.content-padded {
    padding: 10px;
}
#wrapper {
    height: 100%;
    overflow:hidden;
}
#site {
    height: 100%;
}
#content {
    overflow-y:auto;
    height:100%;
}
@-webkit-keyframes rotate {
    from {
        -webkit-transform: rotate(0deg);
    }

    to {
        -webkit-transform: rotate(360deg);
    }
}

.spinner {
    width: 36px;
    height: 36px;
    background-image: url("../vendor/topcoat/img/spinner2x.png");
    background-size: 36px;
    background-repeat: no-repeat;
    position: absolute;
    z-index: 1000;
    left: 45%;
    top: 45%;
    -webkit-animation-name: rotate;
    -webkit-animation-duration: 1s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
}

/**
 * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
 * http://cssreset.com
 */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /** Disable orange highlight */
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}

body {
    line-height: 1;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

    blockquote:before, blockquote:after,
    q:before, q:after {
        content: '';
        content: none;
    }

table {
    border-collapse: collapse;
    border-spacing: 0;
}


/*Alert screen css*/
.topLeftTriangle {
    position: absolute;
    top: -1px;
    left: 0px;
    width: 0px;
    height: 0px;
    border-style: solid;
    border-width: 25px 25px 0 0;
   

}
.high {
     border-color: #e13030 transparent transparent transparent;
}


.topcoat-list__item {
    padding: 0rem;
}
.alertItemContainer {
    /*padding: 20px;*/
    position:relative; 
    width: 100%; 
    /*height: 100%;*/
    height:56px;
}
.alertItemBody {
    padding:20px;
    overflow:hidden;
}
/*Settings screen*/

.retrieveButton {
    width: 60%;
    max-width: 300px;
}

.submitButton {
    width: 38%;
    max-width: 200px;
}


/*Overriding topcoat for ui stuff here*/

.topcoat-text-input {
    width: 100%;
    max-width: 500px;
    margin-bottom: 2px;
    /*height: 3rem;*/
}

.topcoat-list {
    overflow:hidden;
}
@media (min-width:1000px) {
    .topcoat-button--cta {
        width: 150px;
        max-width: 500px;
    }

    .topcoat-text-input {
        width: 700px;
        max-width: 500px;
        margin-bottom: 2px;
    }
}

